# jornada1_teste

components/hcf_adc/: hcf_adc.c
components/ioplaca/: ioplaca.c
components/lcdvia595/: lcdvia595.c
main/: CMakeLists.txt  app_main.c
